tests/NormalTests/paczka1/fuzzy1/77936881.err
Error in line 7: A8I9CtZ9 S905 7(,0
Error in line 5: A8I9CtZ9 S95 66,3
Error in line 11: 8HXPvkClP A709 24,2
Error in line 8: A8I9CtZ9 S905 293,8
Error in line 14: dvCGhjY S95 41,1
Error in line 15: A709 A160 770,8
Error in line 24: A8I9CtZ9 A160 85,1
